--- a/docs/changelog/lab-testing/api.mdx
+++ b/docs/changelog/lab-testing/api.mdx
@@ -6,9 +6,9 @@ title: "API"
 It is now possible to obtain PSC location and availability data from the API.
 
 <Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
-In the [area info](/api-reference/lab-testing/area-info) endpoint, you can obtain the number of PSC's per lab in a 25km radius of the provided zip code.
+In the [area info](/api-reference/lab-testing/area-info) endpoint, you can obtain the number of PSC's per lab in the radius of the provided zip code.
 
-In the [PSC data](/api-reference/lab-testing/psc-info) endpoint, you can query details regarding the PSC's in a 25km radius of the provided zip code and lab.
+In the [PSC data](/api-reference/lab-testing/psc-info) endpoint, you can query details regarding the PSC's in the radius of the provided zip code and lab.
 
 Similarly, in the [PSC order data](/api-reference/lab-testing/order-psc-info) endpoint, you can query PSC data with regards to the provided order's zip code and lab.
 
