Improve BYOO + SetCustomCred docs

--- a/docs/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials.mdx
+++ b/docs/api-reference/org-management/team-custom-credentials/upsert-team-custom-credentials.mdx
@@ -4,9 +4,17 @@ title: Set Team Custom Credentials
 ---
 
 import OrgManagementAPI from '/snippets/org-management-api.mdx';
+import BYOO from '/snippets/byoo.mdx';
 
 <OrgManagementAPI />
 
+### OAuth Providers
+
+<BYOO />
+
+While most credentials are active immediately once set through this endpoint, some credentials may not.
+Check out the [Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth#through-the-org-management-api) documentation
+for more information.
 
 <RequestExample>
 ```bash cURL
