--- a/docs/wearables/guides/dexcom_v3.mdx
+++ b/docs/wearables/guides/dexcom_v3.mdx
@@ -2,9 +2,9 @@
 title: "Dexcom"
 ---
 
-<Info>
-[Bring Your Own OAuth](/wearables/connecting-providers/bring_your_own_oauth) is available for [the Grow and Scale plans](https://tryvital.io/pricing).
-</Info>
+import BYOO from '/snippets/byoo.mdx';
+
+<BYOO />
 
 ## Connecting Dexcom to Vital
 
