--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -3,7 +3,7 @@ title: "API"
 ---
 
 
-### New ETL broker supported: Azure Event Hub (Jun 14)
+### Azure Event Hubs as ETL Pipeline destination (Jun 14)
 
 You can now receive [events](/webhooks/introduction) from Vital directly to your Azure Event Hubs.
 
