--- a/docs/webhooks/etl-pipelines.mdx
+++ b/docs/webhooks/etl-pipelines.mdx
@@ -171,5 +171,5 @@ Having said that, you are strongly encouraged to check for and drop any messages
 
 When you have completed the setup, please provide Vital the following information:
 
-- A connection string of the following format:  `Endpoint=sb://<NamespaceName>.servicebus.windows.net/;SharedAccessKeyName=<KeyName>;SharedAccessKey=<KeyValue>`
+- A [connection string](https://learn.microsoft.com/en-us/azure/event-hubs/event-hubs-get-connection-string) of the following format:  `Endpoint=sb://<NamespaceName>.servicebus.windows.net/;SharedAccessKeyName=<KeyName>;SharedAccessKey=<KeyValue>`
 - Name of your event hub
