--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -2,6 +2,18 @@
 title: "API"
 ---
 
+
+### Azure Event Hubs as ETL Pipeline destination (Jun 14)
+
+You can now receive [events](/webhooks/introduction) from Vital directly to your Azure Event Hubs.
+
+More about ETL Pipelines [here](/webhooks/etl-pipelines).
+
+<Info>
+ETL Pipelines are available for [the Scale plan](https://tryvital.io/pricing).
+</Info>
+
+
 ### Manage Team Brand Information (Apr 24)
 You can now manage Brand Information of your Vital Teams through the Org Management API.
 
