magnifying glass icon

--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -6,7 +6,7 @@ title: "API"
 
 You can now search and filter through your teams' users in the dashboard!
 
-<Accordion icon="billboard" iconType="duotone" title="Details" defaultOpen>
+<Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
 
 Find your user by typing their Client User ID or Vital User ID into the search bar. For lab testing users: Name, Email and Phone Number are also supported.
 
