Update the deprecated providers section

--- a/docs/wearables/providers/introduction.mdx
+++ b/docs/wearables/providers/introduction.mdx
@@ -24,7 +24,6 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Garmin](https://www.garmin.com)                 <br />`garmin`          | Fitness watches (all devices)                                 | All Vital Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/garmin) |
 | [Hammerhead](https://www.hammerhead.io)          <br />`hammerhead`      | Cycling computers                                             | All Vital Teams                                                                      | Password Auth |
 | [iHealth](https://ihealthlabs.com)               <br />`ihealth`         | Blood pressure, Fitness scales, Glucometers & Fitness watches | ⚠️  [BYOO only](/wearables/connecting-providers/bring_your_own_oauth)                 | OAuth |
-| [MyFitnessPal](https://www.myfitnesspal.com)     <br />`my_fitness_pal`  | Nutrition data                                                | All Vital Teams                                                                      | MyFitnessPal Diary Share Key<br />[↗️ Guide](/wearables/guides/my_fitness_pal) |
 | [Oura](https://ouraring.com)                     <br />`oura`            | Smart Sleep tracking ring                                     | All Vital Teams                                                                      | OAuth |
 | [Peloton](https://www.onepeloton.com)            <br />`peloton`         | Popular Indoor Exercise bike                                  | All Vital Teams                                                                      | Password Auth |
 | [Renpho](https://renpho.com)                     <br />`renpho`          | Fitness Scales                                                | All Vital Teams                                                                      | Password Auth |
@@ -36,11 +35,12 @@ We currently Support over 300+ devices, a full list can be seen below.
 | [Polar](https://www.polar.com/accesslink-api/)   <br />`polar`           | Finnish sports tech pioneer                                   | All Vital Teams                                                                      | OAuth<br />[↗️ Guide](/wearables/guides/polar) |
 | [Cronometer](https://www.cronometer.com)         <br />`cronometer`      | Nutrition data                                                | All Vital Teams                                                                      | OAuth |
 
-### Attention required
+### Deprecated providers
 
 | Provider (Slug)                                                             | Status                                                                                        | Availability | Remarks |
 | --------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------- | ------------ | ------- |
-| [Google Fit](https://www.google.com/fit/)           <br /> `google_fit`     | Google will shut down Google Fit on June 30, 2025, with no cloud-based replacement. Android Health Connect is the successor. | All Vital Teams | OAuth<br />[↗️ Guide](/wearables/guides/google_fit) |
+| [Google Fit](https://www.google.com/fit/)           <br /> `google_fit`     | Google will shut down Google Fit on June 30, 2025. Android Health Connect is the successor.   | All Vital Teams | OAuth<br />[↗️ Guide](/wearables/guides/google_fit) |
+| [MyFitnessPal](https://www.myfitnesspal.com)     <br />`my_fitness_pal`     | Deprecated                                                                                    | All Vital Teams | MyFitnessPal Diary Share Key<br />[↗️ Guide](/wearables/guides/my_fitness_pal) |
 
 
 
