--- a/docs/changelog/core/api.mdx
+++ b/docs/changelog/core/api.mdx
@@ -2,6 +2,18 @@
 title: "API"
 ---
 
+### User Search and Introspection insights available in the dashboard (Jun 19)
+
+You can now search and filter through your teams' users in the dashboard!
+
+<Accordion icon="magnifying-glass" iconType="duotone" title="Details" defaultOpen>
+
+Find your user by typing their Client User ID or Vital User ID into the search bar. For lab testing users: Name, Email and Phone Number are also supported.
+
+Click on a user row to access the brand new User Details page.
+You can view their connections status, available resources, insights from the [Introspection API](/api-reference/introspection/user-resources) and more!
+</Accordion>
+
 
 ### Azure Event Hubs as ETL Pipeline destination (Jun 14)
 
