--- a/docs/api-reference/user/deregister-a-provider.mdx
+++ b/docs/api-reference/user/deregister-a-provider.mdx
@@ -3,6 +3,20 @@ title: "Deregister Connection"
 openapi: "DELETE /v2/user/{user_id}/{provider}"
 ---
 
+<Note>
+Deregistration has well-defined behaviour only on [cloud-based providers](/wearables/providers/introduction#cloud-based-providers).
+</Note>
+
+<Warning>
+While you can call this endpoint against these [SDK-based providers](/wearables/providers/introduction#sdk-based-providers),
+Vital Mobile SDK would automatically "reconnect" on the next data sync attempt.
+
+We do not have a "disconnect" mechanism for SDK-based providers at this time.
+
+You can pause [Health SDK data sync](/wearables/sdks/vital-health#pausing-data-synchronization) client-side, or
+[sign-out the user](/wearables/sdks/vital-core#reset-the-sdk-sign-out) from the SDK.
+</Warning>
+
 <RequestExample>
 
 ```bash cURL
